# chiz.work.gd-gateway

./: .env.template  .gitignore  Dockerfile  Jenkinsfile  README.md  compose.dev.yml  compose.yaml  deploy.sh  docker-compose.yaml  dockerfile  dockerfile_dev  pyproject.toml
app/: main.py
app/middlewares/: debug_log_middleware.py
docs/: backlog.json  private_registry.md
docs/common/: dev_log.md  private_registry.md
docs/dev_log/: dev_log.md
docs/dev_log/bck_log/: target_31.08.2025.md
scripts/: pipeline_run_dev.sh  run.sh
